# blogs

./: .gitignore
cython/: cython.md  fib.c  fib_c  fib_cpdef.c  fib_cpdef.pyx  fib_cython.c  fib_cython.pyx  fib_typed.c  fib_typed.pyx
cython-recursion/: cython-recursion.md
fractals/: fractals.html.bkup  fractals.html.bkup2  fractals.md  mand.py
generators/: generators.md
ld_preload_hacks/: ld_preload_hacks.md
memoize-python/: Python Memoization.ipynb
memoize-python/exported_markdown/: ._Python Memoization.md  Python Memoization.md  Python-Memoization.md
memoize-python/zip/: ._Python Memoization.md  Python Memoization.md
meta-trace/: trace.py
metaclasses/: ._Metaclasses.md  Metaclasses.md
module-properties/: module-properties.md
module-properties/my_package/: __init__.py  module1.py
python-closures-and-scope/: Closures-and-scope-in-python.md
python-currying/: PythonCurrying.md
python-private-functions/: python-private-functions.md
python_v_C/: python_vs_C.md
ray-tracing/: ray-tracing.md
shared-memory/: interprocess_communication_with_shared_memory.md
sphinx/: how_to_use_sphinx.md
ssh-for-fun-and-profit/: ._SSH-for-fun-and-profit.md  SSH-for-fun-and-profit.md
stack-overflow/: ._Harding-end-of-tour.odp  a.out  dup2.s  echo.c  example-bad.cpp  from-the-web.c  stack-overflow.md  tst.c
stack-overflow/source/: asm-not-working.s  asm-working.s  asm.dmp  asm.s  asm2.dmp  asm2.s  dup2.c  echo.c  exploit.py  fork.c  nc_exploit.py  tst.c
use-python-library-from-c++/: art_wrapper.pyx  main.cpp  python-from-c++.md
wrap_cpp/: CMakeLists.txt  DES3.cpp  DES3.pyx  bp.cpp  cyphertext  setup.py  wrap_c_cpp.md
